...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_judul_latar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_content_title"
                    android:elevation="2dp"
                    android:padding="10dp"
                    android:text="Latar Belakang"
                    android:textColor="@color/black"
                    app:drawableRightCompat="@drawable/ic_arrow_down" />

                <RelativeLayout
                    android:id="@+id/tv_isi_latar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_content"
                    android:elevation="1dp"
...
                        android:text="@string/latar_belakang"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_judul_visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_content_title"
                    android:elevation="2dp"
                    android:padding="8dp"
                    android:text="Visi"
                    android:textColor="@color/black"
                    app:drawableRightCompat="@drawable/ic_arrow_down" />

                <RelativeLayout
                    android:id="@+id/tv_isi_visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/bg_content"
                    android:elevation="1dp"
...
                        android:text="@string/visi"
                        android:textColor="@color/black" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_judul_misi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_content_title"
                    android:elevation="2dp"
                    android:padding="8dp"
                    android:text="Misi"
                    android:textColor="@color/black"
                    app:drawableRightCompat="@drawable/ic_arrow_down" />

                <RelativeLayout
                    android:id="@+id/tv_isi_misi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_content"
                    android:elevation="1dp"
...
