<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.home.detail.DetailContentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PantiAsuhanDhuafaBaniSalam.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            app:popupTheme="@style/Theme.PantiAsuhanDhuafaBaniSalam.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/appBar"
        app:cardCornerRadius="15dp">

    <ImageView
        android:id="@+id/header_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/panti"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_judul_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Judul Artikel"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/tv_layout_tanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_judul_detail"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tanggal_artikel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rabu, 21 Maret 2021"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | "
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Panti Asuhan Bani Salam"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_isi_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_layout_tanggal"
        android:layout_margin="16dp"
        android:text="Judul Artikel"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>