<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="Home"/>
<!--    <item-->
<!--        android:id="@+id/page_prayer"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_time_green"-->
<!--        android:title="Prayer"/>-->
    <item
        android:id="@+id/page_donation"
        android:enabled="true"
        android:icon="@drawable/ic_donation"
        android:title="Donation"/>
    <item
        android:id="@+id/page_about"
        android:enabled="true"
        android:icon="@drawable/ic_about"
        android:title="About"/>
</menu>