...
                        <include layout="@layout/shimmer_item_layout" />

                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_below="@id/layout_title_activity"/>

                <com.facebook.shimmer.ShimmerFrameLayout
...
                        android:textColor="@color/green_500"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_below="@id/layout_title_article"/>

            </RelativeLayout>
...
